crates/tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_u8_neg.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u8`
  ┌─ [snippet]:3:6
  │
3 │   u8(-1)
  │      ^^ does not fit into type `u8`


